# restaurant-eda

./: .gitignore  AGENT.md  README.md  fix_keras_imports.py  main.py  pyproject.toml
.specify/memory/: constitution.md
.windsurf/rules/: specify-rules.md
.windsurf/skills/code-review/: REVIEW-TEMPLATE.md  SKILLS.md  STYLE-GUIDE.md
.windsurf/skills/exploratory-data-analysis/: data_exploration.md
ai/skills/: data_cleaning.md  evaluation.md  experiment_review.md  feature_engineering.md  model_training.md  visualization.md
backend/: pyproject.toml  requirements.txt
backend/src/: app.py
backend/src/api/: routes.py  schemas.py
backend/src/models/: analytics.py  restaurant.py
backend/src/services/: analytics.py  data_loader.py
backend/src/utils/: charts.py
backend/tests/: conftest.py
backend/tests/contract/: test_api_contracts.py
backend/tests/integration/: test_api.py  test_api_charts.py  test_api_foodie_areas.py  test_api_search.py  test_api_top_restaurants.py  test_pages.py  test_performance.py
backend/tests/unit/: test_analytics.py  test_analytics_foodie_areas.py  test_analytics_top_restaurants.py  (+4 more)
data/: zomato-lite.csv
frontend/templates/: base.html  charts.html  drilldown_foodie_areas.html  drilldown_restaurant_types.html  drilldown_restaurants.html  foodie_areas.html  index.html  restaurant_types.html  top_restaurants.html
specs/001-restaurant-analytics/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-dashboard-tiles-search/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+6 files in other folders)
